--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <body>
     <div id="app"></div>
-
-    <p>test OK</p>
+    <p>修正しました</p>
 
     <script src="src/index.js"></script>
   </body>
